Update box spacing issue

--- a/assets/layouts/default/css/custom.css
+++ b/assets/layouts/default/css/custom.css
@@ -1015,6 +1015,10 @@ body{
 .cards-container .card {
     display: inline-block;
     overflow: visible;
+	Width:100%;
+}
+select{
+	padding:5px 0;
 }
 
 @media only screen and (max-width: 600px) {
@@ -1225,13 +1229,17 @@ body{
     padding: 0px;
 }
 .card .card-content {
-    padding: 20px 0px;
+    padding: 6px 20px 20px;
  }
 .card-content span.card-title {
-    padding: 0px 15px;
+    padding: 0px 0px;
+}
+[type="radio"]+label:before, [type="radio"]+label:after{
+	width:14px;
+	height:14px;
 }
 .card.blue-grey.darken-1.card-box .form-group .input-field label {
-    padding: 0px 15px;
+    padding: 0px 0px;
 }
 .card.blue-grey.darken-1.card-box .form-group .input-field input {
     padding: 0px 33px 0px 14px;
@@ -1335,3 +1343,5 @@ input:not([type]), input[type=text], input[type=password], input[type=email], in
     width: 100%;
 }
 }
+
+.pad-card
